add user crud and user roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,9 @@ quarkus.http.root-path=/api
 smallrye.jwt.sign.key.location=jwt/privateKey.pem
 mp.jwt.verify.issuer=app-auth
 mp.jwt.verify.publickey.location=jwt/publicKey.pem
-quarkus.mongodb.connection-string = mongodb+srv://ecommerce_user:H5l1USvAzd6hu63T@cluster0.ynn0ufc.mongodb.net/test
-quarkus.mongodb.database = ecommerce
+quarkus.mongodb.connection-string=mongodb+srv://ecommerce_user:H5l1USvAzd6hu63T@cluster0.ynn0ufc.mongodb.net/test
+quarkus.mongodb.database=ecommerce
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.log.level=WARN
