validate user login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ quarkus.mongodb.database=ecommerce
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
-quarkus.log.level=WARN
+quarkus.log.level=INFO
