--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ quarkus.mongodb.database=ecommerce
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.log.level=INFO
+quarkus.log.category."org.apache.http".level=INFO
