--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'io.quarkus:quarkus-hibernate-validator'
-    implementation("io.quarkus:quarkus-mongodb-panache")
+    implementation 'io.quarkus:quarkus-mongodb-panache'
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     implementation 'io.quarkus:quarkus-smallrye-jwt'
     implementation 'io.quarkus:quarkus-smallrye-jwt-build'
