refactor code, add role

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 quarkus.http.root-path=/api
 smallrye.jwt.sign.key.location=jwt/privateKey.pem
 mp.jwt.verify.issuer=app-auth
+smallrye.jwt.path.sub=app-auth
 mp.jwt.verify.publickey.location=jwt/publicKey.pem
 quarkus.mongodb.connection-string=mongodb+srv://ecommerce_user:H5l1USvAzd6hu63T@cluster0.ynn0ufc.mongodb.net/test
 quarkus.mongodb.database=ecommerce
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
-quarkus.log.level=INFO
-quarkus.log.category."org.apache.http".level=INFO
+#quarkus.log.category."org.mongodb.driver.client".level=OFF
+#quarkus.log.category."org.mongodb.driver.cluster".level=OFF
+#quarkus.log.category."io.quarkus.runtime.util.ContainerRuntimeUtil".level=OFF
