--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ quarkus.mongodb.connection-string=mongodb+srv://ecommerce_user:H5l1USvAzd6hu63T@
 quarkus.mongodb.database=ecommerce
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
-#quarkus.log.category."org.mongodb.driver.client".level=OFF
-#quarkus.log.category."org.mongodb.driver.cluster".level=OFF
-#quarkus.log.category."io.quarkus.runtime.util.ContainerRuntimeUtil".level=OFF
+quarkus.log.category."org.mongodb.driver.client".level=OFF
+quarkus.log.category."org.mongodb.driver.cluster".level=OFF
+quarkus.log.category."io.quarkus.runtime.util.ContainerRuntimeUtil".level=OFF
