implemented rating of products

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ quarkus.http.access-log.enabled=true
 quarkus.log.category."org.mongodb.driver.client".level=OFF
 quarkus.log.category."org.mongodb.driver.cluster".level=OFF
 quarkus.log.category."io.quarkus.runtime.util.ContainerRuntimeUtil".level=OFF
+quarkus.grpc.server.port=9000
+quarkus.grpc.clients.tracker.host=127.0.0.1
+quarkus.grpc.clients.tracker.port=9001
+quarkus.grpc.clients.notify.host=127.0.0.1
+quarkus.grpc.clients.notify.port=9002
